# DDN

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DDN 2.1 package example.ipynb  README.md  dataset_syntren_genename.txt  output_syntren.csv  pyproject.toml
Python/: Common and differential network.ipynb  Commonedge part.ipynb  DDN 2.1  Residual update acceleration.ipynb  DDN.py  DDNv2.py  Lasso Strong Rule.ipynb  README.md  ddnv2.py  output_syntren.csv
R/: DESCRIPTION  DemoScriptSimNet.R  bcd.R  ddn.R  solve2d.R
R/R/: SimGRNNetwork.sif  bcd.R  bcdCorr.R  ddn.R  generatenetwork.R  solve2d.R
R/man/: bcd.Rd  ddn.Rd  solve2d.Rd
R/vignettes/: DemoScriptSimNet.R  DemoScriptSimNet.Rmd  DemoScriptSimNet.html  GRNsimData.RData
docs/: Makefile  conf.py  index.md  make.bat
docs/notebooks/: Tutorial_1_Quick_start.ipynb  Tutorial_2_Basic_usage.ipynb  Tutorial_3_Parameter_tuning.ipynb
notebooks/: Tutorial_1_Quick_start.ipynb  Tutorial_2_Basic_usage.ipynb  Tutorial_3_Parameter_tuning.ipynb
src/ddn/: __init__.py  bcd.py  ddn.py  parameter_tuning.py  performance.py  pipeline.py  simulation.py  solver.py  strong_rule.py  tools.py  tools_export.py  visualize.py
src/ddn3/: ddn.py  solver.py  visualize2.py
tests/: test_ddn.py
