[tool.poetry]
name = "ddn"
version = "3.0.0"
description = "Dependency network analysis under two conditions"
authors = ["Minta Lu", "Yizhi Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
